Changes in 1.6 (??.??.2009)

 - Irrlicht can now come with multiple device types compiled in, the device to use is selected by SIrrlichtCreationParameters.DeviceType. This defaults to EIDT_BEST which automatically select the best device available starting with native, then X11, SDL and finally the console.

 - Added support for EXP2 fog distribution. This required a change in the setFog parameters where now an enum value instead of the bool linear is given.

 - IFileSystem changes:
   
   - Renamed the following functions-
      IFileArchive::getArchiveType to getType
      IFileSystem::registerFileArchive to addFileArchive
      IFileSystem::unregisterFileArchive to removeFileArchive
      IFileArchive::openFile to createAndOpenFile

   - New enum, E_FILE_ARCHIVE_TYPE. getType on IArchiveLoader and IFileArchive now both return this.
   
   - IFileSystem::addFileArchive takes a parameter to specify the archive type rather always using the file extension. IFileSystem::addZipFileArchive, addFolderFileArchive and addPakFileArchive now use this but these functions are now marked as deprecated. Users should now use addFileArchive instead.

   - Added TAR archive loader.

   - The ZIP archive loader can now load gzip files, combined with the TAR loader this means Irrlicht now has native support for .tar.gz 
     Currently this must be done in two calls, for example:
       fileSystem->addFileArchive("path/to/myArchive.tar.gz");
       fileSystem->addFileArchive("myArchive.tar");

 - Fix highlighting in IGUIEditBox where kerning pairs are used in the font. For example in future italic, OS or other custom fonts.

 - IOSOperator::getTextFromClipboard returns now const c8* instead of c8* 

 - Support for copy&paste on linux (X11) added (fixing bug 2804014 found by Pan)

 - bugfix for 2795321 found by egrath: Don't rely anymore on broken XkbSetDetectableAutoRepeat.

 - bugfix: CMountPointReader::openFile no longer returns true for empty files. Corresponding test added.
